err/koality-cli.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/koality_cli'...
Compiling './lib/python3.5/site-packages/koality_cli/config_creator.py'...
***   File "./lib/python3.5/site-packages/koality_cli/config_creator.py", line 69
    print "Backed up existing koality configuration file to %s" % (koality_config_path + '.bak')
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/koality_cli/generators'...
Listing './lib/python3.5/site-packages/koality_cli/generators/section_generators'...
Listing './lib/python3.5/site-packages/koality_cli/generators/section_generators/java'...
Listing './lib/python3.5/site-packages/koality_cli/generators/section_generators/javascript'...
Listing './lib/python3.5/site-packages/koality_cli/generators/section_generators/nodejs'...
Listing './lib/python3.5/site-packages/koality_cli/generators/section_generators/python'...
Listing './lib/python3.5/site-packages/koality_cli/generators/section_generators/ruby'...
Compiling './lib/python3.5/site-packages/koality_cli/generators/section_generators/ruby/test_factory_generator.py'...
***   File "./lib/python3.5/site-packages/koality_cli/generators/section_generators/ruby/test_factory_generator.py", line 19
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/koality_cli/repo_reflector'...
Listing './lib/python3.5/site-packages/koality_cli/scripts'...
Compiling './lib/python3.5/site-packages/koality_cli/scripts/koality.py'...
***   File "./lib/python3.5/site-packages/koality_cli/scripts/koality.py", line 107
    print "fatal: unable to identify version control system to use."
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/koality_cli-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
